separação dos datasets de treino e teste

--- a/Lista02/lista_02_231111280.ipynb
+++ b/Lista02/lista_02_231111280.ipynb
@@ -325,6 +325,18 @@
     "plt.legend(['Dataset', 'Regressão Polinomial'])\n",
     "plt.plot()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(map_size_weight)):\n",
+    "\n",
+    "train_dataset = \n",
+    "test_dataset = "
+   ]
   }
  ],
  "metadata": {
