--- a/Lista03/lista_03_231111280_q02.ipynb
+++ b/Lista03/lista_03_231111280_q02.ipynb
@@ -22,8 +22,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calcula-se a média e a variância dos dados fornecidos. Em seguida, retira-se a média dos dados."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,39 +57,17 @@
     "for i in range(len(mean_vec_pca)):\n",
     "    print(f'Média x{i + 1} = {mean_vec_pca[i]:.2f}')\n",
     "    print(f'Desvio Padrão x{i + 1} = {std_vec_pca[i]:.2f}')\n",
-    "    print(40*'=')"
+    "    print(40*'=')\n",
+    "\n",
+    "pca_normal = (arr_pca - mean_vec_pca)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Média z1 = -0.00\n",
-      "Desvio Padrão z1 = 1.00\n",
-      "========================================\n",
-      "Média z2 = 0.00\n",
-      "Desvio Padrão z2 = 1.00\n",
-      "========================================\n",
-      "Média z3 = -0.00\n",
-      "Desvio Padrão z3 = 1.00\n",
-      "========================================\n"
-     ]
-    }
-   ],
    "source": [
-    "pca_normal = (arr_pca - mean_vec_pca)/std_vec_pca\n",
-    "\n",
-    "mean_pca_normal = np.mean(pca_normal, axis=0)\n",
-    "std_pca_normal = np.sqrt(np.var(pca_normal, axis=0))\n",
-    "for i in range(len(mean_pca_normal)):\n",
-    "    print(f'Média z{i + 1} = {mean_pca_normal[i]:.2f}')\n",
-    "    print(f'Desvio Padrão z{i + 1} = {std_pca_normal[i]:.2f}')\n",
-    "    print(40*'=')"
+    "Calcula-se a matriz de covariância dos dados."
    ]
   },
   {
@@ -102,6 +88,14 @@
    "source": [
     "cov_vec_pca = np.cov(np.transpose(arr_pca))\n",
     "print(f'S = {cov_vec_pca}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Encontra-se os valores dos autovalores associados a cada autovetor. Além disso, eles são ordenados de forma descendente."
    ]
   },
   {
@@ -134,6 +128,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Com os valores dos autovalores, é possível compreender a variância corresponde a cada sentido da projeção. Nesse contexto, percebe-se que com apenas 1 autovetor, tem-se mais de 96% da variância total naquela direção."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -159,12 +161,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Considerando que os dois primeiros autovalores correspondem a mais de 98%, pode-se utilizar duas componentes principais. Para o caso de utilizar apenas a primeira componente principal, em uma primeira análise, deve-se manter uma cautela."
+    "Nesse contexto, espera-se que o dataset possa ser reduzido a apenas uma componente. A seguir, é montado o vetor W que contém em cada coluna os k primeiros autovetores."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -202,8 +204,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por fim, são plotados os gráficos contendo, inicialmente, os dados originais que foram fornecidos, ou seja, considerando-se três componentes."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -231,24 +241,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "z_1 = np.transpose(w1) @ np.transpose(arr_pca - mean_vec_pca)\n",
-    "x_r_1 = np.transpose(w1 @ z_1) + (mean_vec_pca)\n",
-    "\n",
-    "z_2 = np.transpose(w2) @ np.transpose(arr_pca - mean_vec_pca)\n",
-    "x_r_2 = np.transpose(w2 @ z_2) + (mean_vec_pca)\n",
-    "\n",
-    "z_1 = np.transpose(z_1)\n",
-    "z_2 = np.transpose(z_2)"
+    "Em seguida, os dados são reconstruídos levando em consideração as duas primeiras componentes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -263,6 +265,15 @@
     }
    ],
    "source": [
+    "z_1 = np.transpose(w1) @ np.transpose(arr_pca - mean_vec_pca)\n",
+    "x_r_1 = np.transpose(w1 @ z_1) + (mean_vec_pca)\n",
+    "\n",
+    "z_2 = np.transpose(w2) @ np.transpose(arr_pca - mean_vec_pca)\n",
+    "x_r_2 = np.transpose(w2 @ z_2) + (mean_vec_pca)\n",
+    "\n",
+    "z_1 = np.transpose(z_1)\n",
+    "z_2 = np.transpose(z_2)\n",
+    "\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(projection='3d')\n",
     "\n",
@@ -276,8 +287,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aqui os dados são plotados considerando-se apenas uma componente."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -305,8 +324,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por fim, são sobrepostos os gráficos referentes aos dados originais, aos dados reconstruídos com duas e apenas uma componente principal."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -332,6 +359,14 @@
     "ax.set_zlabel('x3')\n",
     "plt.title('Dados reconstruídos sobrepostos')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nesse contexto, é possível observar que a técnica de PCA utilizada nesse dataset apresenta resultados muito bons. Isso se deve ao fato de que grande parte da variância dos dados se encontra em apenas uma direção. Com isso, o uso da principal componente (uma única componente), consegue representar bem as informações contidas no dataset."
    ]
   }
  ],
